Revert "feat: silence scala Unsafe warning"
This reverts commit efe0dd74ef9435b45e118976492d29dbf95a103f.